Resolves #6195: Tag vertical clipping (#6196)
Resolves #6195: Tag vertical clipping

--- a/src/app/features/tag/tag/tag.component.scss
+++ b/src/app/features/tag/tag/tag.component.scss
@@ -18,7 +18,7 @@
 .tag-title {
   display: block;
   font-size: 12px;
-  line-height: 1;
+  line-height: 1.15;
 
   color: var(--text-color-muted);
 
